fix layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1649,25 +1649,25 @@ hr {
   }
 }
 .section-padding30 {
-  padding-top: 183px;
-  padding-bottom: 170px;
+  padding-top: 80px;
+  padding-bottom: 30px;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1600px) {
   .section-padding30 {
   padding-top: 50px;
-  padding-bottom: 0px;	
+  padding-bottom: 20px;	
   }
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .section-padding30 {
     padding-top: 150px;
-    padding-bottom: 120px;
+    padding-bottom: 30px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .section-padding30 {
     padding-top: 100px;
-    padding-bottom: 70px;
+    padding-bottom: 30px;
   }
 }
 @media only screen and (min-width: 576px) and (max-width: 767px) {
@@ -1718,18 +1718,18 @@ hr {
 }
 .footer-padding {
   padding-top: 130px;
-  padding-bottom: 100px;
+  padding-bottom: 20px;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1600px) {
   .footer-padding {
     padding-top: 130px;
-    padding-bottom: 100px;
+    padding-bottom: 20px;
   }
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .footer-padding {
     padding-top: 100px;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -3577,7 +3577,7 @@ hr {
 .footer-area .footer-pera .info1 {
   margin-bottom: 10px;
   line-height: 1.8;
-  margin-right : 100px;
+  margin-right : 52px;
   padding-right: 40px;
   display: inline-block;
 }
